<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:background="@drawable/fondo_degradado"
    android:backgroundTintMode="add"
    android:clickable="true"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:foregroundTint="#0E0E0E"
    android:padding="16dp"
    tools:context=".Steps.RegistroMascotaActivity"
    tools:visibility="visible">


    <EditText
        android:id="@+id/nacimientoMascota"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#0097A7"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#0097A7"
        android:hint="@string/FechaNacimiento"
        android:inputType="date"
        android:minHeight="48dp"
        android:shadowColor="#0097A7"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/teal_700"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/razaMascota" />

    <EditText
        android:id="@+id/nombreMascota"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autoText="true"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="src_over"
        android:drawableTint="#0097A7"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#0097A7"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#0097A7"
        android:textAlignment="gravity"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/teal_700"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Guarderia"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/razaMascota"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#0097A7"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#0097A7"
        android:foregroundTintMode="screen"
        android:hint="@string/RazaMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#0097A7"
        android:textAlignment="gravity"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/teal_700"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreMascota" />

    <EditText
        android:id="@+id/TamañoMascota"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#0097A7"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#0097A7"
        android:hint="@string/TamañoMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#0097A7"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/teal_700"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generoMascota" />

    <EditText
        android:id="@+id/DescripcionMascota"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#0097A7"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#0097A7"
        android:gravity="top"
        android:hint="@string/DescripciónMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#0097A7"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/teal_700"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TamañoMascota" />

    <EditText
        android:id="@+id/generoMascota"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#0097A7"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#0097A7"
        android:hint="@string/GeneroMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#0097A7"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/teal_700"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nacimientoMascota" />


    <Button
        android:id="@+id/btnContinuarMascota"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="@color/teal_700"
        android:clickable="true"
        android:shadowColor="#673AB7"
        android:text="@string/botonSIGUIENTEMascota"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionMascota"
        app:rippleColor="#673AB7"
        app:strokeColor="#673AB7" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Guarderia"
        android:layout_width="155dp"
        android:layout_height="158dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/petout"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>