<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFFAD"
    android:clickable="true"
    tools:context=".Steps.InicioSesionActivity">

    <EditText
        android:id="@+id/InicioSesionCorreo"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/InicioSesionEmail"
        android:inputType="textWebEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/InicioSesionContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/InicioSesionPassword"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@drawable/petout"
        android:textIsSelectable="false"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InicioSesionCorreo" />

    <Button
        android:id="@+id/Continuar"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="#512DA8"
        android:clickable="true"
        android:text="@string/botonInicioSesionContinuar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InicioSesionContraseña"
        app:layout_constraintVertical_bias="0.293" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="155dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/cardview_default_elevation"
        android:src="@drawable/paseando"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView4"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="130dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/cardview_default_elevation"
        android:src="@drawable/facebook"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView6"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="130dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/cardview_default_elevation"
        android:src="@drawable/google"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView7"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/cardview_default_elevation"
        android:src="@drawable/whatsaap"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView8"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/cardview_default_elevation"
        android:src="@drawable/instagram1"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginStart="295dp"
        android:layout_marginTop="452dp"
        android:autoSizeTextType="uniform"
        android:text="Forgot Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>